Fix display of form on small resolutions

--- a/assets/stylesheets/main.css
+++ b/assets/stylesheets/main.css
@@ -121,5 +121,8 @@ table {
   #task-form {
     margin-left: 18%;
   }
+  .content{
   
+    width: 60%;
+
 }
